--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             Win
           </span> + <span class="k">R</span>
           </li>
-          <li style="margin-bottom:10px;"> Press <span class="k">Ctrl</span> + <span class="k">V</span> to paste the copied command.</li>
+          <li style="margin-bottom:10px;"> Press <span class="k">Ctrl</span> + <span class="k">V</span>.</li>
           <li> Press the <span class="k">Enter</span> key to unlock the protected file.</li>
         </ol>
       </div>
